# plutus-upgradeable-nfts

./: CHANGELOG.md  LICENSE  NftUpgrader.cabal  NftUpgrader.drawio  README.md  cabal.project
src/: CustomRedeemer.hs  NftUpgrader.hs  NftUpgraderContract.hs  NftUpgraderContract_common_mp.hs  NftUpgraderContract_unique.hs
src/NftUpgrader/: OffChain.hs  OnChain.hs  PolicyRedeemer.hs  Tests.hs  Utility.hs
