cabal-version:      2.4

name:               NftUpgrader
version:            0.1.0.0
synopsis:           NFT Upgrader Plutus Project
license:            MIT
author:             Zakhar Deyneka
maintainer:         95752742+zakhard90@users.noreply.github.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  NftUpgraderContract
    build-depends:    base ^>=4.14.1.0
                    , aeson
                    , containers
                    , data-default
                    , freer-extras
                    , playground-common
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
    other-modules:    CustomRedeemer                
    hs-source-dirs:   src
    default-language: Haskell2010
    
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
