cabal-version:      2.4

name:               NftUpgrader
version:            0.1.0.0
synopsis:           NFT Upgrader Plutus Project
license:            MIT
author:             Zakhar Deyneka
maintainer:         95752742+zakhard90@users.noreply.github.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  NftUpgrader
    
    other-modules:    NftUpgrader.OnChain
                    , NftUpgrader.OffChain
                    , NftUpgrader.Tests
                    , NftUpgrader.PolicyRedeemer
                    , NftUpgrader.Utility
    
    build-depends:    base ^>=4.14.1.0
                    , aeson -any
                    , bytestring -any
                    , cardano-api -any
                    , containers -any
                    , data-default 
                    , freer-extras -any
                    , playground-common -any
                    , plutus-contract -any
                    , plutus-ledger -any
                    , plutus-ledger-api -any
                    , plutus-ledger-constraints -any
                    , plutus-script-utils
                    , plutus-tx -any
                    , plutus-tx-plugin -any
                    , text -any
                    , lens -any
                    , serialise -any
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
